--- a/style.css
+++ b/style.css
@@ -1,4 +1,51 @@
 .header{
+    background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.3)),url(images/donation11.jpg);
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    background-image: url(images/donation13.jpg);
+    color: white;
+    opacity: 100px;
+}
+.head-text{
+    background-color: rgba(0,0,0,0.1);
+
+}
+#btn1{
+    text-decoration: none;
+    padding: 20px 50px;
+    font-size: 1.25rem;
+    position: relative;
+    margin: 32px;
+    background: #000;
+    color: #fff;
+    border-radius: 30px;
+    transition: transform 0.3s ease;   
+}
+#btn1::after,#btn1::before{
+    content:"";
+    position: absolute;
+    opacity: 0.3;
+    background:red;
+    border-radius: inherit;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom:0;
+    z-index: -1;
+    transition: transform 0.3s ease;
+}
+#btn1:hover{
+    transform: translate(-12px,-12px);
+
+}
+#btn1:hover::after{
+    transform: translate(6px,6px);
+}
+#btn1:hover::before{
+    transform: translate(12px,12px);
 }
