--- a/style.css
+++ b/style.css
@@ -49,3 +49,30 @@
 #btn1:hover::before{
     transform: translate(12px,12px);
 }
+
+/* Second section start */
+
+.second-page{
+    font-size: 30px;
+    display: flex;
+    text-align: center;
+    width:100%;
+    height:100vh;
+    justify-content: center;
+    align-items: center;
+}
+.price{
+  display: inline-flex;
+  text-indent: 100px;
+}
+#sp{
+    text-decoration: none;
+    padding: 20px 30px;
+    font-size: 1rem;
+    position: relative;
+    margin: 32px;
+    background:red;
+    color: #fff;
+    border-radius: 40px;
+}
+        
